<resources>
    <string name="app_name">Tin nhắn chúc tết 2019</string>
    <string name="cung_chuc_tan_nien">Cung chúc tân niên</string>
    <string name="confirm_exit">Nhấn Back 1 lần nữa để thoát</string>
    <string name="msg_lib">Thư viện lời chúc</string>
    <string name="msg_mine">Lời chúc của tôi</string>
    <string name="msg_rate">Đánh giá ứng dụng</string>
    <string name="home">Home</string>
    <string name="num_of_msg">Lời chúc thứ</string>
    <string name="edit">Sửa</string>
    <string name="share">Chia sẻ</string>
    <string name="copy">Sao chép</string>
    <string name="swipe"><![CDATA[<< trượt trái hoặc phải để xem tiếp>>]]></string>
    <string name="copy_successful">Sao chép thành công</string>
    <string name="share_with">Chia sẻ</string>
    <string name="done">Xong</string>
    <string name="add_to_my_collect">Thêm vào của tôi</string>
    <string name="msg_of_mine">Lời chúc của tôi</string>
    <string name="add_new_msg">Thêm lời chúc mới</string>
    <string name="cannot_empty">Nội dung không được trống</string>
    <string name="not_have_any_msg">Bạn chưa có lời chúc nào! hãy tạo lời chúc</string>
    <string name="add_success">Thêm lời chúc thành công</string>
    <string name="title_num">Lời chúc</string>
    <string name="edit_msg">Chỉnh sửa lời chúc</string>
    <string name="edit_sucess">Sửa thành công</string>
    <string name="i_want">Tôi muốn</string>
    <string name="delete_msg">Xóa lời chúc</string>
    <string name="ok">Ok</string>
    <string name="cancel">Không</string>
    <string name="delete_success">Xóa lời chúc thành công</string>
    <string name="notifi">Xóa lời chúc</string>
    <string name="delete_confirm_msg">Bạn có muốn xóa lời chúc này?</string>
    <string name="delete_failed">Xóa thất bại</string>
    <string name="add_msg">Thêm lời chúc mới</string>
    <string name="msg_is_exists">Lời chúc này đã tồn tại!</string>
    <string name="msg_not_change">Nội dung chưa thay đổi!</string>
    <string name="leave">Hủy tác vụ</string>
    <string name="cancel_add">Bạn có muốn hủy việc thêm mới?</string>
    <string name="cancel_edit">Bạn có muốn hủy việc sửa?</string>
    <string name="chuc_tet_2019">Chúc Tết 2019</string>
</resources>
