<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="message"
            type="thiepchuctet.tinnhanchuctet.tetnguyendan.models.Message" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_dark">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?attr/actionBarSize"
            android:background="#2C3546"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/ic_arrow_back_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:ellipsize="end"
                android:gravity="center"
                android:scrollbars="vertical"
                android:singleLine="true"
                android:textColor="#F6FF0A"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                app:layout_constraintLeft_toRightOf="@id/btn_back"
                app:layout_constraintRight_toLeftOf="@id/btn_home"
                app:layout_constraintTop_toTopOf="@id/btn_back" />

            <Button
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/content_of_msg"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/background_msg"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@id/txt_swipe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_container" />

        <TextView
            android:id="@+id/txt_swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/swipe"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/btn_share"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content_of_msg" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:scrollbars="vertical"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_copy"
            app:layout_constraintTop_toBottomOf="@id/txt_swipe" />

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            app:layout_constraintBottom_toBottomOf="@id/btn_share"
            app:layout_constraintLeft_toRightOf="@id/btn_share"
            app:layout_constraintRight_toLeftOf="@id/btn_edit"
            app:layout_constraintTop_toTopOf="@id/btn_share" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="@id/btn_share"
            app:layout_constraintLeft_toRightOf="@id/btn_copy"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_share" />
    </android.support.constraint.ConstraintLayout>
</layout>
