<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/_86sdp"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintBottom_toTopOf="@id/layout_msg_lib"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:background="@color/colorText"
            app:layout_constraintBottom_toBottomOf="@id/img_banner"
            app:layout_constraintLeft_toLeftOf="@id/img_banner"
            app:layout_constraintRight_toRightOf="@id/img_banner"
            app:layout_constraintTop_toTopOf="@id/img_banner" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_msg_lib"
            android:layout_width="@dimen/_286sdp"
            android:layout_height="@dimen/_52sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@android:color/holo_red_dark"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toTopOf="@id/layout_msg_mine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_banner">

            <ImageView
                android:id="@+id/img_msg_lib"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/colorText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:singleLine="true"
                android:text="@string/msg_lib"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="@id/img_msg_lib"
                app:layout_constraintLeft_toRightOf="@id/img_msg_lib"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_msg_lib" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_msg_mine"
            android:layout_width="@dimen/_286sdp"
            android:layout_height="@dimen/_52sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@android:color/holo_red_dark"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toTopOf="@id/layout_msg_mine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_msg_lib">

            <ImageView
                android:id="@+id/img_msg_mine"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:singleLine="true"
                android:text="@string/msg_mine"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="@id/img_msg_mine"
                app:layout_constraintLeft_toRightOf="@id/img_msg_mine"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_msg_mine" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_rate"
            android:layout_width="@dimen/_286sdp"
            android:layout_height="@dimen/_52sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@android:color/holo_red_dark"
            android:padding="@dimen/_4sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_msg_mine">

            <ImageView
                android:id="@+id/img_msg_rate"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@android:color/holo_green_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:singleLine="true"
                android:text="@string/msg_rate"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="@id/img_msg_rate"
                app:layout_constraintLeft_toRightOf="@id/img_msg_rate"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_msg_rate" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>
